@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em3EventAction.cc,v 1.4 2000-01-21 09:11:06 maire Exp $
+// $Id: Em3EventAction.cc,v 1.5 2000-12-07 12:38:25 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -34,10 +34,6 @@
 #include "G4ios.hh"
 #include "G4UnitsTable.hh"
 #include "Randomize.hh"
-
-#ifndef G4NOHIST
- #include "CLHEP/Hist/HBookFile.h"
-#endif
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
@@ -81,10 +77,6 @@ void Em3EventAction::EndOfEventAction(const G4Event* evt)
   G4double totEAbs, totLAbs;
   char str1[6], str2[6];
   strcpy(str1,"EAbs");strcpy(str2,"LAbs");
-    
-#ifndef G4NOHIST  
-  HepTuple* ntuple=Em3Run->GetnTuple();
-#endif  
      
   if (HCE) CHC = (Em3CalorHitsCollection*)(HCE->GetHC(calorimeterCollID));
 
@@ -98,19 +90,8 @@ void Em3EventAction::EndOfEventAction(const G4Event* evt)
 	     totEAbs += (*CHC)[j]->GetEdepAbs(k); 
              totLAbs += (*CHC)[j]->GetTrakAbs(k);     
             }
-         Em3Run->fillPerEvent(k,totEAbs,totLAbs);
-	 
-#ifndef G4NOHIST        
-         //fill ntuple
-         //	 
-	 str1[4] = str2[4] = (char)((int)('0') + k);
-         ntuple->column(str1,totEAbs);
-         ntuple->column(str2,totLAbs);
-#endif  	 
+         Em3Run->fillPerEvent(k,totEAbs,totLAbs);	 
        }
-#ifndef G4NOHIST       
-      ntuple->dumpData();
-#endif             	  
     }
     
   if (G4VVisManager::GetConcreteInstance())
